row align fix

--- a/src/components/ColorPicker/ColorPicker.module.scss
+++ b/src/components/ColorPicker/ColorPicker.module.scss
@@ -39,6 +39,7 @@
 
 .leftRow {
   display: flex;
+  align-items: center;
   font-size: 28px;
   gap: 5px;
 }
